libs/toolkit-macros-tests/tests/ui/fail/gear_name_uppercase.stderr
error: gear name must start with a lowercase letter, found 'F'
 --> tests/ui/fail/gear_name_uppercase.rs:6:12
  |
6 |     name = "FileParser",  // Should fail: contains uppercase letters
  |            ^^^^^^^^^^^^
